# agent-memory

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-28-claude-memory-wrapper-implementation.md
docs/superpowers/specs/: 2026-06-28-claude-memory-wrapper-design.md
src/agent_memory/: cli.py  config.py  context.py  db.py  doctor.py  extractor.py  hooks.py  paths.py  redaction.py  review.py  wrapper.py
tests/: test_cli.py  test_config.py  test_context.py  test_db.py  test_extractor.py  test_hooks.py  test_wrapper.py
